# SandOS

./: .gitignore  BASE_OS_STATUS.md  BRANCH_SUMMARY.md  Cargo.toml  FACE_UI_REPORT.md  PRD.md  PRD_Distributed.md  README.md  UI_FEATURES_PROPOSAL.md  UI_INTERACTIONS.md  UI_REPORT.md  a.md  audio_status.md  board_evaluation.md  clean_dead_code.py  code_improvement_report.md  current_ui_report.md  display_report.md  feature_proposals.md  fix_warnings.py  full_picture.md  hardware_next_steps.md  hardware_verification_report.md  head_os_prd.md  head_os_report.md  parse_cargo.py  report.md  rust-toolchain.toml  solutions.md  test_ui.py  ui_improvement_proposals.md  wasm-migration-review.md  wasm-sandbox-capabilities.md
.cargo/: config.toml
abi/: Cargo.toml
abi/src/: lib.rs
docs/: component-incremental-flow.md  esp32s3_oled_display_config.md  os-architecture.md  remote-control-integrations.md
firmware/: Cargo.toml  build.rs  guest.wasm  partitions.csv  run.sh  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/scripts/: run-qemu.sh
firmware/src/: audio.rs  battery.rs  cpu_usage.rs  hardware_profile.rs  inference.rs  led_state.rs  main.rs  main.rs.patch  main_fix.py  message_bus.rs  motors.rs  ntp.rs  openai.rs  rgb_led.rs  router.rs  sd_card.rs  sensors.rs  telemetry.rs  touch.rs  vienna_fetch.rs  web_server.rs  wifi.rs
firmware/src/core0/: abi.rs  espnow.rs  espnow.rs.orig  mod.rs  ota.rs  wasm_vm.rs
firmware/src/core1/: mod.rs  pid.rs
firmware/src/display/: driver.rs  mod.rs  mod.rs.orig  st7789_clean.py  st7789_clean_2.py  st7789_clean_3.py  st7789_clean_4.py  st7789_driver.py  st7789_setup.py  strip.rs  ui.rs
firmware/src/drivers/: audio.rs  battery.rs  mod.rs  sd.rs  touch.rs
firmware/src/ulp/: mod.rs
host-tests/: Cargo.toml
host-tests/src/: lib.rs  mock_host.rs  vm_harness.rs
host-tests/tests/: phase1_tests.rs  phase2_tests.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  phase6_tests.rs  phase7_tests.rs  phase8_tests.rs
rclaw/: Cargo.toml
rclaw/src/: lib.rs
tools/: download_ft6336.py
wasm-apps/: Cargo.toml
wasm-apps/src/: lib.rs
worker/: Cargo.toml
worker/src/: espnow.rs  main.rs  motors.rs
