[workspace]
members = ["."]
resolver = "2"

[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
description = "SandOS firmware for ESP32-S3 (no_std Embassy)"
license = "MIT"

# This crate targets xtensa-esp32s3-none-elf.
# Build with:  cd firmware && cargo build --release
# (requires the ESP Rust toolchain: cargo install espup && espup install)

[dependencies]
# ── Espressif HAL & Embassy ───────────────────────────────────────────────────
esp-hal = { version = "0.23" }
esp-hal-embassy = { version = "0.6" }
embassy-executor = { version = "0.7", features = ["task-arena-size-65536"] }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.6" }

# ── ESP-NOW wireless + WiFi STA ──────────────────────────────────────────────
esp-wifi = { version = "0.12", features = ["wifi"] }

# ── TCP/UDP/DHCP network stack ────────────────────────────────────────────────
embassy-net = { version = "0.6", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

# ── Async I/O traits (TCP socket read/write) ──────────────────────────────────
embedded-io-async = "0.6"

# ── Logging ───────────────────────────────────────────────────────────────────
log = "0.4"
esp-println = { version = "0.13", default-features = false, features = [
    "esp32s3",
    "log",
    "uart",
    "critical-section",
] }
esp-backtrace = { version = "0.15", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

# ── Heap allocator (for Wasm engine on PSRAM) ─────────────────────────────────
esp-alloc = "0.6"

# ── WebAssembly interpreter ────────────────────────────────────────────────────
wasmi = { version = "0.31", default-features = false }

# ── Phase 2 — Display ─────────────────────────────────────────────────────────
embedded-graphics = { version = "0.8", default-features = false }
mipidsi = { version = "0.8", default-features = false }
display-interface-spi = { version = "0.5", default-features = false }

# ── RGB LED (WS2812 NeoPixel) ─────────────────────────────────────────────────
smart-leds = "0.3"

# ── Utilities ─────────────────────────────────────────────────────────────────
static_cell = { version = "2", features = ["nightly"] }
heapless = "0.8"
nb = "1"
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

# Shared ABI definitions
abi = { path = "../abi", default-features = false }

[build-dependencies]
esp-build = "0.2"

[features]
default = ["esp32s3"]

# ESP-NOW coexistence — disabled by default while debugging WiFi STA.
# Enable with: cargo build --features espnow
espnow = ["esp-wifi/esp-now"]

# Target chip
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-hal/octal-psram",
    "esp-hal-embassy/esp32s3",
    "esp-wifi/esp32s3",
]

# Enable defmt logging (connect a probe for output)
defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
]

[dependencies.defmt]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
