[package]
name    = "wasm-apps"
version = "0.1.0"
edition = "2021"
description = "SandOS guest Wasm applications (Phase 1 & 2)"
license = "MIT"

# Compile with:
#   rustup target add wasm32-unknown-unknown
#   cargo build --release --target wasm32-unknown-unknown
# Output:
#   target/wasm32-unknown-unknown/release/wasm_apps.wasm
# Then copy to firmware/guest.wasm for embedding.

[lib]
crate-type = ["cdylib"]
name       = "wasm_apps"
